[project]
name = "pyuow"
version = "0.9.3"
description = "Python custom implementation of unit of work pattern"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE*"]
requires-python = ">=3.10,<4.0"
authors = [
    { name = "SMAD" },
]
maintainers = [
    { name = "Sviatoslav Mosorko", email = "slavikmosorko@gmail.com" },
    { name = "Andrii Divnych", email = "divnycha05@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
sqlalchemy = ["sqlalchemy>=2.0.50,<3.0.0"]

[project.urls]
Homepage = "https://github.com/S-M-A-D/PyUoW"
Repository = "https://github.com/S-M-A-D/PyUoW"
Tracker = "https://github.com/S-M-A-D/PyUoW/issues"
Changelog = "https://github.com/S-M-A-D/PyUoW/releases"

[project.scripts]
pyuow = "pyuow_cli.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "pre-commit>=4.6.0,<5.0.0",
    "pytest-asyncio>=1.4.0,<2.0.0",
    "mypy>=2.1.0,<3.0.0",
    "coverage[toml]>=7.14.1,<8.0.0",
    "ruff>=0.15.15,<0.16.0",
    "greenlet>=3.5.1,<4.0.0",
    "testcontainers[postgres]>=4.14.2,<5.0.0",
    "asyncpg>=0.31.0,<0.32.0",
    "psycopg2-binary>=2.9.12,<3.0.0",
]
docs = [
    "mkdocs>=1.6.1,<2.0.0",
    "mkdocs-material>=9.7.6,<10.0.0",
    "mkdocstrings[python]>=1.0.4,<2.0.0",
]

[tool.poetry]
packages = [{include = "pyuow"}, {include = "pyuow_cli"}]
exclude = ["pyuow/cli/**"]
include = ["pyuow/py.typed", "pyuow_cli/assets/skills/*.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
addopts = "-xvrs --color=yes"
junit_family = "xunit2"
testpaths = [
    "tests",
]
markers = [
    "skip_on_ci: mark a test that cannot be executed on CI with unsoported platforms."
]

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
]
concurrency = ["greenlet"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abc.abstractmethod",
    "raise NotImplementedError",
]
show_missing = true
skip_covered = true
fail_under = 99

[tool.ruff]
line-length = 79
target-version = "py310"
extend-exclude = [".venv"]

[tool.ruff.lint]
select = [
    "F",
    "I",
]

[tool.mypy]
strict = true
strict_optional = true
strict_equality = true
check_untyped_defs = true
no_implicit_optional = true
disallow_any_unimported = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true
show_column_numbers = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
